# nanomailer

./: Makefile.am  configure.in
doc/: nullmailer-inject.1  nullmailer-queue.8  nullmailer-send.8  nullmailer.7  sendmail.1
lib/: address.cc  hostname.cc  tcpconnect.cc
protocols/: protocol.cc  smtp.cc
src/: inject.cc  queue.cc  send.cc
